# tscrb.py

./: .gitignore  flake.nix  main.py  mkPythonApp.nix  pyproject.toml  result
notebooks/: Dev.ipynb
src/tscrb/: __init__.py  chat.py  cli.py  test.py  transcription.py  utils.py
src/tscrb/commands/: ideolog.py  tscrb.py
