[project]
name = "tscrb"
version = "0.1.0"
description = "Command line program to transcribe audio files using AI transcription APIs."
authors = [
    {name = "Maxime Laudrin",email = "maxime.laudrin@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mistralai (>=1.9.11,<2.0.0)",
    "openai (>=2.8.1,<3.0.0)",
    "typer (>=0.20.0,<0.21.0)"
]

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.10"
catppuccin-jupyterlab = "^0.2.4"

[tool.poetry.scripts]
tscrb = "tscrb.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
